--- a/style.css
+++ b/style.css
@@ -50,3 +50,9 @@
     stroke-width: 4;
     stroke-miterlimit: 10;
 }
+
+#hour,
+#minute,
+#second {
+    transform-origin: 300px 300px;  /* Center point for rotation */
+}
