--- a/style.css
+++ b/style.css
@@ -3,10 +3,14 @@
     https://www.linkedin.com/learning/javascript-essential-training-3
 */
 
+body {
+    background-color: #5c4474;
+}
+
+
 #clock {
     width: 100%;
     display: flex;
-    padding: 2em;
     height: 90vh;
     justify-content: center;
     align-items: middle;
@@ -16,12 +20,13 @@
     border-radius: 50%;
     background: #d6d62d;
     border: 18px solid #dc535b;
-    box-shadow: inset 4px 6px 16px 0 rgb(0, 0, 0);
+    box-shadow: inset 0.5vh 0.75vh 2vh 0.5vh rgb(0, 0, 0),
+                0.5vh 0.75vh 5vh rgb(0, 0, 0);
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 500px;
-    height: 500px;
+    width: 90vh;
+    height: 90vh;
     margin: 0 auto;
 }
 
@@ -31,13 +36,13 @@
     border: 2px;
     border-style: solid;
     border-color: rgba(0,0,0,0);
-    box-shadow: inset -1px -2px 1px 0 rgba(255, 255, 255, 0.541);
+    box-shadow: inset -0.25vh -0.5vh 0.1vh 0 rgba(255, 255, 255, 0.404);
     margin: 2px -7px 0 -5px;
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 506px;
-    height: 506px;
+    width: 92vh;
+    height: 92vh;
 }
 
 .circle {
