--- a/style.css
+++ b/style.css
@@ -3,17 +3,22 @@
     https://www.linkedin.com/learning/javascript-essential-training-3
 */
 
+@import url('https://fonts.googleapis.com/css?family=Montserrat&display=swap');
+
 body {
     background-color: #5c4474;
 }
 
+.quote {
+    grid-area: quote;
+    color: white;
+    font-family: 'Montserrat', sans-serif;
+    margin: auto 5vh;
+}
 
-#clock {
-    width: 100%;
-    display: flex;
-    height: 90vh;
-    justify-content: center;
-    align-items: middle;
+h1,
+h2 {
+    font-weight: lighter;
 }
 
 .clock {
@@ -28,6 +33,8 @@ body {
     width: 90vh;
     height: 90vh;
     margin: 0 auto;
+
+    grid-area: clock;
 }
 
 .shine {
@@ -43,13 +50,6 @@ body {
     justify-content: center;
     width: 92vh;
     height: 92vh;
-}
-
-.circle {
-    fill: #b3b42c;
-    stroke: #dc535b;
-    stroke-width: 9;
-    stroke-miterlimit: 10;
 }
 
 .mid-circle {
@@ -89,4 +89,13 @@ body {
 #second {
     transform-origin: 300px 300px;  /* Center point for rotation */
     transition: transform .5s ease-in-out;  /* Transition for animation */
+}
+
+.main {
+    display: grid;
+    grid-template-columns: 50% 50%;
+    grid-template-rows: auto;
+    grid-template-areas: "quote clock";
+    column-gap: 5vh;
+    justify-items: center;
 }
