--- a/style.css
+++ b/style.css
@@ -91,6 +91,11 @@ h2 {
     transition: transform .5s ease-in-out;  /* Transition for animation */
 }
 
+.shadow {
+    -webkit-filter: drop-shadow( 3px 3px 2px rgba(0, 0, 0, .7));
+    filter: drop-shadow( 3px 3px 2px rgba(0, 0, 0, .7));
+}
+
 .main {
     display: grid;
     grid-template-columns: 50% 50%;
